benchmark-results/7/merge/cseq/concurrentwitness2test.2024-11-08_13-30-27.logfiles/SV-COMP23_unreach-call.cseq-mix015.opt.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix015.opt.yml/mix015.opt.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix015.opt.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c
Compilation started
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c: In function ‘P1’:
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c:598:19: error: ‘FALSE’ undeclared (first use in this function)
  598 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c:598:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c: In function ‘P2’:
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c:638:19: error: ‘FALSE’ undeclared (first use in this function)
  638 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_bmkzybei/tmp/tmpccvkej49.c:639:19: error: ‘TRUE’ undeclared (first use in this function)
  639 |   weak$$choice2 = TRUE;;
      |                   ^~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
